--- a/stage_4_data_integration/format_gene_mapping.ipynb
+++ b/stage_4_data_integration/format_gene_mapping.ipynb
@@ -29,16 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# explode alias symbols to map alias symbols to approved symbols\n",
-    "\n",
-    "gene_name_map_df = pd.read_csv(gene_mapping_filepath, sep=\"\\t\", dtype=str)\n",
-    "# add official symbol as alias for mapping\n",
-    "gene_name_map_df['Alias symbols'] = gene_name_map_df['Alias symbols'].fillna('')\n",
-    "gene_name_map_df['Alias symbols'] = gene_name_map_df['Alias symbols'] + \", \" + gene_name_map_df['Approved symbol']\n",
-    "# put alias symbols in list for exploding\n",
-    "gene_name_map_df['Alias symbols'] = gene_name_map_df['Alias symbols'].apply(lambda x: [symb for symb in str(x).split(\", \") if symb])\n",
-    "gene_name_map_df = gene_name_map_df.explode('Alias symbols')\n",
-    "gene_name_map_df = gene_name_map_df.rename(columns={'Alias symbols': 'Alias symbol'})"
+    "gene_name_map_df = pd.read_csv(gene_mapping_filepath, sep=\"\\t\", dtype=str)"
    ]
   },
   {
@@ -49,7 +40,7 @@
    "source": [
     "# add CUI\n",
     "cui_to_hgnc = pd.read_csv(cui_to_hgnc_filepath)\n",
-    "gene_name_map_df = gene_name_map_df.merge(cui_to_hgnc, how='left', on='HGNC ID')"
+    "gene_name_map_df = gene_name_map_df.merge(cui_to_hgnc, how='left', on='HGNC ID').rename(columns={\"CUI\": \"CUI_gene\"})"
    ]
   },
   {
@@ -60,6 +51,134 @@
    "source": [
     "# save to csv\n",
     "gene_name_map_df.to_csv(gene_mapping_output_filepath, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HGNC ID</th>\n",
+       "      <th>Approved symbol</th>\n",
+       "      <th>Alias symbols</th>\n",
+       "      <th>UniProt ID(supplied by UniProt)</th>\n",
+       "      <th>OMIM ID(supplied by OMIM)</th>\n",
+       "      <th>NCBI Gene ID(supplied by NCBI)</th>\n",
+       "      <th>Ensembl ID(supplied by Ensembl)</th>\n",
+       "      <th>CUI_gene</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HGNC:1</td>\n",
+       "      <td>A12M1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HGNC:10</td>\n",
+       "      <td>A2MRAP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HGNC:100</td>\n",
+       "      <td>ASIC1</td>\n",
+       "      <td>BNaC2, hBNaC2</td>\n",
+       "      <td>P78348</td>\n",
+       "      <td>602866</td>\n",
+       "      <td>41</td>\n",
+       "      <td>ENSG00000110881</td>\n",
+       "      <td>C1412115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HGNC:1000</td>\n",
+       "      <td>BCL5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C1412765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HGNC:10000</td>\n",
+       "      <td>RGS4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>P49798</td>\n",
+       "      <td>602516</td>\n",
+       "      <td>5999</td>\n",
+       "      <td>ENSG00000117152</td>\n",
+       "      <td>C1419374</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      HGNC ID Approved symbol  Alias symbols UniProt ID(supplied by UniProt)  \\\n",
+       "0      HGNC:1           A12M1            NaN                             NaN   \n",
+       "1     HGNC:10          A2MRAP            NaN                             NaN   \n",
+       "2    HGNC:100           ASIC1  BNaC2, hBNaC2                          P78348   \n",
+       "3   HGNC:1000            BCL5            NaN                             NaN   \n",
+       "4  HGNC:10000            RGS4            NaN                          P49798   \n",
+       "\n",
+       "  OMIM ID(supplied by OMIM) NCBI Gene ID(supplied by NCBI)  \\\n",
+       "0                       NaN                            NaN   \n",
+       "1                       NaN                            NaN   \n",
+       "2                    602866                             41   \n",
+       "3                       NaN                            NaN   \n",
+       "4                    602516                           5999   \n",
+       "\n",
+       "  Ensembl ID(supplied by Ensembl)  CUI_gene  \n",
+       "0                             NaN       NaN  \n",
+       "1                             NaN       NaN  \n",
+       "2                 ENSG00000110881  C1412115  \n",
+       "3                             NaN  C1412765  \n",
+       "4                 ENSG00000117152  C1419374  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gene_name_map_df.head()"
    ]
   },
   {
