--- a/stage_4_data_integration/format_gene_mapping.ipynb
+++ b/stage_4_data_integration/format_gene_mapping.ipynb
@@ -49,13 +49,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add gene to CUI mapping of KG triples\n",
+    "literature_df = pd.read_csv('../data/semrep_relationships_processed.csv')\n",
+    "id_to_cui_1 = literature_df[['id1', 'identifier1']].rename(columns={'id1': 'id', 'identifier1': 'identifier'})\n",
+    "id_to_cui_2 = literature_df[['id2', 'identifier2']].rename(columns={'id2': 'id', 'identifier2': 'identifier'})\n",
+    "\n",
+    "id_to_cui = id_to_cui_1.append(id_to_cui_2).drop_duplicates()\n",
+    "id_to_cui['identifier'] = id_to_cui['identifier'].apply(lambda x: x.split(';'))\n",
+    "id_to_cui = id_to_cui.explode('identifier')\n",
+    "\n",
+    "gene_name_map_df = gene_name_map_df.merge(id_to_cui, left_on='Approved symbol', right_on='id', how='left')\n",
+    "gene_name_map_df['CUI_gene'] = gene_name_map_df['CUI_gene'].fillna(\"\")\n",
+    "gene_name_map_df['identifier'] = gene_name_map_df['identifier'].fillna(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# collect all CUI for each gene\n",
+    "def get_multiple_cui_per_gene(row):\n",
+    "    if row['CUI_gene'] == row['identifier']:\n",
+    "        return row['CUI_gene']\n",
+    "    elif row['CUI_gene'] and not row['identifier']:\n",
+    "        return row['CUI_gene']\n",
+    "    elif not row['CUI_gene'] and row['identifier']:\n",
+    "        return row['identifier']\n",
+    "    elif not row['CUI_gene'] and not row['identifier']:\n",
+    "        return \"\"\n",
+    "    else:\n",
+    "        return row['CUI_gene'] + \",\" + row['identifier']\n",
+    "    \n",
+    "gene_name_map_df['CUI'] = gene_name_map_df.apply(get_multiple_cui_per_gene, axis=1)\n",
+    "gene_name_map_df['CUI'] = gene_name_map_df['CUI'].apply(lambda x: x.split(','))\n",
+    "gene_name_map_df = gene_name_map_df.explode('CUI')\n",
+    "gene_name_map_df = gene_name_map_df.drop(['CUI_gene', 'id', 'identifier'], axis=1).rename(columns={'CUI': 'CUI_gene'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# save to csv\n",
     "gene_name_map_df.to_csv(gene_mapping_output_filepath, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +144,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -110,7 +155,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -165,14 +210,14 @@
        "4                    602516                           5999   \n",
        "\n",
        "  Ensembl ID(supplied by Ensembl)  CUI_gene  \n",
-       "0                             NaN       NaN  \n",
-       "1                             NaN       NaN  \n",
+       "0                             NaN            \n",
+       "1                             NaN            \n",
        "2                 ENSG00000110881  C1412115  \n",
        "3                             NaN  C1412765  \n",
        "4                 ENSG00000117152  C1419374  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
